1) Fix the case we have less arguments for format string than we expected. 2) Return error on unsupported format specs. (both according to POSIX)

PR:     93197